--- a/SimpleAdmin.csproj
+++ b/SimpleAdmin.csproj
@@ -15,6 +15,7 @@
 
 	<ItemGroup>
 	  <PackageReference Include="Microsoft.Data.Sqlite" Version="8.0.0" />
+	  <PackageReference Include="Microsoft.Extensions.Logging" Version="8.0.0" />
 	</ItemGroup> 
 
 </Project>
